[gd_scene load_steps=2 format=3 uid="uid://dvqph8i87yii2"]

[ext_resource type="Script" path="res://ui.gd" id="1_vx8dg"]

[node name="UI" type="Node2D"]
script = ExtResource("1_vx8dg")

[node name="GameOverScreen" type="ColorRect" parent="."]
visible = false
offset_left = -208.0
offset_top = -112.0
offset_right = 184.0
offset_bottom = 112.0
color = Color(0.705882, 0.760784, 0.960784, 1)

[node name="Glouglou" type="RichTextLabel" parent="GameOverScreen"]
layout_mode = 0
offset_left = 152.0
offset_top = 72.0
offset_right = 312.0
offset_bottom = 112.0
text = "GLOUGLOUGLOU..."

[node name="GameOverText" type="RichTextLabel" parent="GameOverScreen"]
layout_mode = 0
offset_left = 200.0
offset_top = 96.0
offset_right = 240.0
offset_bottom = 136.0

[node name="Button" type="Button" parent="GameOverScreen"]
layout_mode = 0
offset_left = 160.0
offset_top = 152.0
offset_right = 280.0
offset_bottom = 192.0
text = "RE-NAGER"

[node name="Score" type="RichTextLabel" parent="."]
offset_left = 840.0
offset_top = -176.0
offset_right = 880.0
offset_bottom = -136.0
text = "0"

[connection signal="button_down" from="GameOverScreen/Button" to="." method="_on_button_button_down"]
